--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex, GO!</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" type="image/png" href="img/pokeball32.png">
 </head>
 <body>
+    <header class="page-header">
+        <a href="index.html">
+            <img src="img/pokelogo.png" alt="Pokemon logo, gotta catch em all" class="page-header_item logo">
+        </a>
+        <hr class="gradient-border">
+    </header>
     
-
+    <footer class="page-footer">
+        <!-- <a target="_blank" href="https://icons8.com/icon/63311/pokeball">Pokeball</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
