--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         </a>
         <hr class="gradient-border">
     </header>
-    <main>
-        <ul class="pokemon-list">
-
-        </ul>
+    <main class="pokedex">
+        <ul class="pokemon-list"></ul>
     </main>
+    <div class="loader">Loading...</div>
     <footer class="page-footer">
         <!-- <a target="_blank" href="https://icons8.com/icon/63311/pokeball">Pokeball</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     </footer>
