--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <title>Pokedex, GO!</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/pokeball32.png">
@@ -16,6 +19,9 @@
         <hr class="gradient-border">
     </header>
     <main class="pokedex">
+        <div class="title-box">
+            <h1 class="title">PokéDex</h1>
+        </div>
         <ul class="pokemon-list"></ul>
     </main>
     <div class="loader">Loading...</div>
