--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </a>
         <hr class="gradient-border">
     </header>
+    <div id="modal-container"></div>
     <main class="pokedex">
         <div class="title-box">
             <h1 class="title">PokéDex</h1>
