Added polyfills again after they poofed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <footer class="page-footer">
         <!-- <a target="_blank" href="https://icons8.com/icon/63311/pokeball">Pokeball</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     </footer>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
