--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet" />
         <title>Pokedex, GO!</title>
-        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="dist/styles_min.css" />
         <link rel="icon" type="image/png" href="img/pokeball32.png" />
     </head>
     <body>
@@ -109,6 +109,6 @@
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch-polyfill.js"></script>
         <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script> -->
-        <script src="js/scripts.js"></script>
+        <script src="dist/scripts_min.js"></script>
     </body>
 </html>
