Added "filter by pokemon type" function

--- a/index.html
+++ b/index.html
@@ -59,6 +59,29 @@
                     id="search-bar"
                     placeholder="🔍 Pokémon name..."
                     aria-label="Search bar" />
+                <div class="type-container">                
+                    <label for="type-filter">Filter by type:</label>
+                    <select name="type-filter" id="type-filter" aria-placeholder="List of Pokemon types to filter" >
+                        <option value="all" class="all">All</option>
+                        <option value="fire" class="fire">Fire</option>
+                        <option value="water" class="water">Water</option>
+                        <option value="electric" class="electric">Electric</option>
+                        <option value="grass" class="grass">Grass</option>
+                        <option value="poison" class="poison">Poison</option>
+                        <option value="flying" class="flying">Flying</option>
+                        <option value="bug" class="bug">Bug</option>
+                        <option value="normal" class="normal">Normal</option>
+                        <option value="fairy" class="fairy">Fairy</option>
+                        <option value="steel" class="steel">Steel</option>
+                        <option value="dragon" class="dragon">Dragon</option>
+                        <option value="ice" class="ice">Ice</option>
+                        <option value="fighting" class="fighting">Fighting</option>
+                        <option value="psychic" class="psychic">Psychic</option>
+                        <option value="ground" class="ground">Ground</option>
+                        <option value="rock" class="rock">Rock</option>
+                        <option value="ghost" class="ghost">Ghost</option>
+                    </select>
+                </div>
             </div>
             <ul class="pokemon-list list-group container"></ul>
 
