--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header class="page-header">
-            <nav class="navbar bg-light navbar-light navbar-expand-sm">
+            <nav class="navbar navbar-light navbar-expand-sm">
                 <!-- Logo -->
                 <a href="index.html" class="navbar-brand">
                     <img src="img/pokelogo.png" alt="Pokemon logo, gotta catch em all" class="page-header_item logo" />
@@ -94,18 +94,21 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="image-el"><img id="modalImage" alt="Pokemon's image" /></div>
-                            <p class="height-el" aria-label="Pokemon's height"></p>
-                            <p class="weight-el" aria-label="Pokemon's weight"></p>
-                            <p class="type-el" aria-label="Pokemon's types"></p>
-                            <div class="stat-container">
-                                <img src="img/health_icon.png" alt="hp icon" />
-                                <img src="img/attack_icon.png" alt="attack icon" />
-                                <img src="img/defense_icon.png" alt="defense icon" />
-                                <span class="hp-stat stat-item"></span>
-                                <span class="attack-stat stat-item"><img id="attackImage" /></span>
-                                <span class="defense-stat stat-item"><img id="defenseImage" /></span>
+                            <div class="pokeData">
+                                <p class="height-el" aria-label="Pokemon's height"></p>
+                                <p class="weight-el" aria-label="Pokemon's weight"></p>
+                                <p class="type-el" aria-label="Pokemon's types"></p>
+                                <p class="ability-el" aria-label="Pokemon's abilities"></p>
+                                <div class="stat-container">
+                                    <img src="img/health_icon.png" alt="hp icon" />
+                                    <img src="img/attack_icon.png" alt="attack icon" />
+                                    <img src="img/defense_icon.png" alt="defense icon" />
+                                    <span class="hp-stat stat-item"></span>
+                                    <span class="attack-stat stat-item"><img id="attackImage" /></span>
+                                    <span class="defense-stat stat-item"><img id="defenseImage" /></span>
+                                </div>
                             </div>
+                            <div class="image-el"><img id="modalImage" alt="Pokemon's image" /></div>
                         </div>
                         <div class="modal-footer navContainer">
                             <button class="previous-button" aria-label="previous pokemon">
